# cpp-lecture-intro-to-concurrency

./: .gitignore  README.md
code/: BadTaskQueue.hpp  BadTransform.hpp  BadWorkerPool.hpp  CMakeLists.txt  amdahls_law.py  main.cpp
code/BadTaskQueue/: CMakeLists.txt
code/BadTaskQueue/include/: BadAsyncTaskQueue.hpp  BadWorkerPool.hpp
code/BadTaskQueue/results/: nehalem_4cores.json
code/BadTaskQueue/scripts/: invoke_bench.sh  process_results.py
code/BadTaskQueue/src/: main.cpp
code/examples/: example01a.cpp  example01b.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp
figs/: amdahl.eps
tex/: lecture.tex  seminar_presentation.tex
